--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.545.0",
     "next": "15.4.4",
-    "payload": "3.59.1",
+    "payload": "^3.59.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "0.34.2"
