--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
+    "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build --webpack",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
@@ -28,7 +28,7 @@
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "lucide-react": "^0.545.0",
-    "next": "15.4.4",
+    "next": "16.0.10",
     "payload": "^3.59.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,7 +44,7 @@
     "@vitejs/plugin-react": "4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "16.0.10",
     "jsdom": "26.1.0",
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
