--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@payloadcms/richtext-lexical": "3.59.1",
     "@payloadcms/ui": "3.59.1",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/react-datepicker": "^7.0.0",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "lucide-react": "^0.545.0",
     "next": "^16.0.10",
     "payload": "^3.59.1",
     "react": "^19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.3",
     "sharp": "0.34.2"
   },
