feat: implement email service with Resend and password reset flow

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+RESEND_API_KEY=re_123456789
+FROM_EMAIL=onboarding@resend.dev
