--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@payloadcms/db-postgres": "3.59.1",
+    "@payloadcms/email-resend": "^3.69.0",
     "@payloadcms/next": "3.59.1",
     "@payloadcms/payload-cloud": "3.59.1",
     "@payloadcms/richtext-lexical": "3.59.1",
@@ -35,6 +36,7 @@
     "react": "^19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.3",
+    "resend": "^6.6.0",
     "sharp": "0.34.2"
   },
   "devDependencies": {
